# TradingAgents-GUI

./: .gitignore  README.md  TradingAgents-GUI-OneClick.bat  install.bat  install.sh  pyproject.toml  start.bat  start.sh
assets/examples/: AAPL_report.html  MRVL_report.html  NVDA_report.html
gui/: __init__.py  agent_map.py  app.py  chat.py  env_store.py  presets.py  providers.py  run_manager.py  stats.py  ui_state.py
gui/static/css/: style.css
gui/static/js/: app.js  app_v2.js
gui/templates/: index.html
tradingagents/: default_config.py
tradingagents/agents/analysts/: fundamentals_analyst.py  market_analyst.py  news_analyst.py  sentiment_analyst.py
tradingagents/agents/managers/: portfolio_manager.py  research_manager.py
tradingagents/agents/researchers/: bear_researcher.py  bull_researcher.py
tradingagents/agents/risk_mgmt/: aggressive_debator.py  conservative_debator.py  neutral_debator.py
tradingagents/agents/trader/: trader.py
tradingagents/agents/utils/: agent_utils.py  core_stock_tools.py  fundamental_data_tools.py  news_data_tools.py  technical_indicators_tools.py  tool_guard.py
tradingagents/dataflows/: alpha_vantage_common.py  yfinance_news.py
tradingagents/llm_clients/: anthropic_client.py  google_client.py  openai_client.py
