[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingagents"
version = "0.2.5+gui.2"
description = "TradingAgents: Multi-Agents LLM Financial Trading Framework (with local web GUI, v2 polish)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.3.81",
    "backtrader>=1.9.78.123",
    "langchain-anthropic>=0.3.15",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=4.0.0",
    "langchain-openai>=0.3.23",
    "langgraph>=0.4.8",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "pandas>=2.3.0",
    "parsel>=1.10.0",
    "pytz>=2025.2",
    "questionary>=2.1.0",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "typer>=0.21.0",
    "setuptools>=80.9.0",
    "stockstats>=0.6.5",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.0",
    "yfinance>=0.2.63",
]

[project.urls]
Homepage    = "https://github.com/TheLocalLab/TradingAgents-GUI"
Repository  = "https://github.com/TheLocalLab/TradingAgents-GUI"
Issues      = "https://github.com/TheLocalLab/TradingAgents-GUI/issues"
Upstream    = "https://github.com/TauricResearch/TradingAgents"

[project.optional-dependencies]
gui = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "markdown>=3.6",
]
# PDF export goes through the browser's Save-as-PDF dialog (zero install,
# works on every OS). The previous WeasyPrint extra has been removed because
# its native GTK / Pango / Cairo dependencies were brittle on Windows.

[project.scripts]
tradingagents = "cli.main:app"
tradingagents-gui = "gui.app:main"

[tool.setuptools.packages.find]
include = ["tradingagents*", "cli*", "gui*"]

[tool.setuptools.package-data]
cli = ["static/*"]
gui = ["static/**/*", "templates/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests requiring external services",
    "smoke: quick sanity-check tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
